2019-10-28  Thomas Beierlein <tomjbe@gentoo.org>

  * NEWS, ToDo: Update NEWS and ToDo files

2019-09-30  Thomas Beierlein <tomjbe@gentoo.org>

  * src/fldigixmlrpc.c, src/gettxinfo.c, src/globalvars.h, src/main.c,
  test/data.c: Fix definition of 'rigmode' variable  Newest version of hamlib
  has an extended range of modei definitions and therefore defined it as
  UInt64. That conflicts with the former definition of 'rigmode' as 32 bit int.

2019-09-29  Thomas Beierlein <tomjbe@gentoo.org>

  * INSTALL: Fix dependencies for Debian like distributions  Thx to Juajo EA8BGO
  for reporting.

2019-09-18  zcsahok <ha5cqz@freemail.hu>

  * src/gettxinfo.c: Fix sideband selection  An unnoticed constant caused wrong
  sideband selection when switching to SSB. Moved SSB and CW settings to
  functions.

2019-09-20  Thomas Beierlein <tomjbe@gentoo.org>

  * src/parse_logcfg.c, src/parse_logcfg.h, src/rules.c: Refactor parsing of
  config files

  * src/parse_logcfg.c, src/rules.c: rewording of startup messages

2019-09-18  Thomas Beierlein <tomjbe@gentoo.org>

  * src/main.c, src/parse_logcfg.c, src/readqtccalls.c, src/rules.c,
  src/sendqrg.c: Fix some minor display problems (Tnx HA5CQZ)  - unify
  capitalisation - do not use fixed display positions - show voice keyer
  messages only in verbose mode

2019-09-16  Thomas Beierlein <tomjbe@gentoo.org>

  * src/addmult.c, src/audio.c, src/background_process.c, src/bandmap.c,
  src/bands.c, src/callinput.c, src/changefreq.c, src/changepars.c,
  src/clusterinfo.c, src/err_utils.c, src/fldigixmlrpc.c, src/freq_display.c,
  src/grabspot.c, src/lancode.c, src/main.c, src/parse_logcfg.c, src/rules.c,
  src/searchlog.c, src/sendbuf.c, src/sendqrg.c, src/showinfo.c,
  src/splitscreen.c, src/ui_utils.c, src/writecabrillo.c: apply astylerc rules

2019-09-15  Thomas Beierlein <tomjbe@gentoo.org>

  * src/main.c, src/startmsg.c, src/startmsg.h: Change handling of verbose
  startup  * Do no longer slow down display of infos. Instead ask for